# melon-api

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/melon/: __init__.py  album.py  base.py  chart.py  models.py
src/melon/models/: __init__.py  album.py  artist.py  base.py  charts.py  common.py  graph.py  report.py  song.py
tests/: conftest.py  test_chart.py  test_chart_live.py
