[project]
name = "melon-chart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/melon"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
markers = [
    "live: marks tests that hit real external APIs (deselect with '-m \"not live\"')",
]
