[project]
name = "melon-api"
version = "0.1.0"
description = "An unofficial API SDK for melon app"
readme = "README.md"
authors = [
    { name = "Bunniesnu", email = "bunniesnu@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/melon"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
markers = [
    "live: marks tests that hit real external APIs (deselect with '-m \"not live\"')",
]

[project.urls]
Homepage = "https://github.com/bunniesnu/melon-api"
Repository = "https://github.com/bunniesnu/melon-api"
